--- a/mobileapp.css
+++ b/mobileapp.css
@@ -1,5 +1,12 @@
+core-block > .block_menteesplus {
+    background-color: #fff;
+    margin: 0 10px 25px;
+    border-radius: 2px;
+    border: 1px solid #e4e6e8;
+    box-shadow: 2px 2px 2px 0px #e4e6e8;
+}
 .menteesplus {
-    margin: 0 7px;
+    margin: 0 10px;
     position: relative;
     margin-bottom: 25px;
 }
