Render course names as html.

--- a/templates/courses.mustache
+++ b/templates/courses.mustache
@@ -27,7 +27,7 @@
 <div class="menteecourses">
     {{#courses}}
         <span class="menteecourse btn btn-primary">
-            <a href="{{courseurl}}">{{coursename}}</a>
+            <a href="{{courseurl}}">{{{coursename}}}</a>
         </span>
     {{/courses}}
 </div>
