Change deprecated function. Add title to icons

--- a/templates/content.mustache
+++ b/templates/content.mustache
@@ -27,8 +27,8 @@
 <div class="menteesplus {{^users.0}}on-profile{{/users.0}}" data-blocktoggle="{{blocktoggle}}" data-menteestoggle="{{menteestoggle}}">
     {{#users.0}}
         {{>block_menteesplus/mentees}}
-        <div class="blocktoggle">{{#blocktoggle}} &#xf06e; {{/blocktoggle}}{{^blocktoggle}} &#xf070; {{/blocktoggle}}</div>
-        <div class="menteestoggle">{{#menteestoggle}} &#xf0d7; {{/menteestoggle}}{{^menteestoggle}} &#xf0da; {{/menteestoggle}}</div>
+        <div class="blocktoggle" title = "{{blocktogletitle}}">{{#blocktoggle}} &#xf06e; {{/blocktoggle}}{{^blocktoggle}} &#xf070; {{/blocktoggle}}</div>
+        <div class="menteestoggle" title = "{{menteestoggletitle}}">{{#menteestoggle}} &#xf0d7; {{/menteestoggle}}{{^menteestoggle}} &#xf0da; {{/menteestoggle}}</div>
     {{/users.0}}
     {{^users.0}}
         <h4 class="profile-title">{{profiletitle}}</h4>
