Remove extra curly brace

--- a/templates/content.mustache
+++ b/templates/content.mustache
@@ -28,7 +28,7 @@
     {{#users.0}}
         {{>block_menteesplus/mentees}}
         <div class="blocktoggle" title = "{{blocktogletitle}}">{{#blocktoggle}}<i class="fa fa-eye" aria-hidden="true"></i> {{/blocktoggle}}{{^blocktoggle}} <i class="fa fa-eye-slash" aria-hidden="true"></i> {{/blocktoggle}}</div>
-        <div class="menteestoggle" title = "{{menteestoggletitle}}">{{#menteestoggle}}}<i class="fa fa-caret-down" aria-hidden="true"></i> {{/menteestoggle}}{{^menteestoggle}} <i class="fa fa-caret-right" aria-hidden="true"></i> {{/menteestoggle}}</div>
+        <div class="menteestoggle" title = "{{menteestoggletitle}}">{{#menteestoggle}}<i class="fa fa-caret-down" aria-hidden="true"></i> {{/menteestoggle}}{{^menteestoggle}} <i class="fa fa-caret-right" aria-hidden="true"></i> {{/menteestoggle}}</div>
     {{/users.0}}
     {{^users.0}}
         <h4 class="profile-title">{{profiletitle}}</h4>
